--- a/01.bg-video/style.css
+++ b/01.bg-video/style.css
@@ -63,8 +63,8 @@
 }
 @media (max-aspect-ratio: 16/9){
   .hero .video{
-    height:100%;
-    width: auto;
+    height:auto;
+    width: 100%;
   }
   
 }
